--- a/src/pages/country/Country.module.css
+++ b/src/pages/country/Country.module.css
@@ -78,6 +78,14 @@
 
 .details_panel_borders_country {
   text-align: center;
+  border-radius: 2px;
+  padding: 3px;
+  box-shadow: var(--box-shadow);
+}
+
+.details_panel_borders_country:hover {
+  transform: translateY(-4px);
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .details_panel_borders_label {
